--- a/src/index.html
+++ b/src/index.html
@@ -84,10 +84,24 @@
         <legend>An interesting fact about you!</legend>
         <label class="form-field">
           Do you love cats?
-          <input type="radio" name="yes">
-          Yes
-          <input type="radio" name="no">
-          No
+          <label>
+            <input
+              type="radio"
+              name="cats"
+              value="yesCats"
+            >
+            Yes
+          </label>
+
+          <label>
+            <input
+              type="radio"
+              name="cats"
+              value="noCats"
+            >
+            No
+          </label>
+
         </label>
 
         <label class="form-field">
