Label was replaced by div

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
 
       <fieldset class="form-block">
         <legend>An interesting fact about you!</legend>
-        <label class="form-field">
+        <div class="form-field">
           Do you love cats?
           <label>
             <input
@@ -102,7 +102,7 @@
             No
           </label>
 
-        </label>
+        </div>
 
         <label class="form-field">
           What is your favorite color?
